--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@ PORT=5000
 API_KEY=pcsi_api@k3y
 
 # Database Configuration
-MONGO_URI=mongodb+srv://racoonracoonra_db_user:PXjamTFNsqrdy1HE@staging.ht1z00d.mongodb.net/pcsi_db
+MONGO_URI=mongodb://localhost:27017/pcsi
 
 # JWT Configuration
 JWT_ACCESS_SECRET=pcsi_access@s3cr3t
