Fixed merge conflicts

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 VITE_API_KEY=pcsi_api@k3y
 # VITE_API_URL=https://pcsi.onrender.com/api
-VITE_API_URL=http://localhost:5000
+VITE_API_URL=http://localhost:5000/api
